@@ -3,9 +3,9 @@
 \paperw10420\paperh11580\hyphauto1\hyphfactor0\cf1\pard\tx8640\tx9600\ql\f0\fs20 \uc0 Copyright 1993-1997 Scott Hess  All Rights Reserved.\par
 \pard\ql\fs16\pard\tx960\tx1920\tx2880\tx3840\tx4800\tx5760\tx6720\tx7680\tx8640\tx9600\li360\ql \uc0 \par
 \par
-\pard\ql\fs36\pard\tx0\li100\ql \uc0 Welcome to TimeMon4.0/Rhapsody\par
+\pard\ql\fs36\pard\tx0\li100\ql \uc0 Welcome to TimeMon4.0\par
 \pard\ql\fs16\pard\tx960\tx1920\tx2880\tx3840\tx4800\tx5760\tx6720\tx7680\tx8640\tx9600\li360\ql \uc0 \par
-\pard\ql\fs24\pard\tx0\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\li300\ql \uc0 TimeMon gives a graphical representation of where the CPU cycles are going.  Version 4.0  requires OPENSTEP 4.x/Mach or Rhapsody, and can run on M68K, Intel, Sparc or PowerPC hardware.  Version 4.0 is basically the OPENSTEP/GNUstep port of TimeMon3.2, there are no new features. \'B2\par
+\pard\ql\fs24\pard\tx0\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\li300\ql \uc0 TimeMon gives a graphical representation of where the CPU cycles are going.  Version 4.0  requires OPENSTEP 4.x/Mach or Rhapsody, and can run on M68K, Intel, Sparc or PowerPC hardware.  Version 4.0 is basically the OPENSTEP port of TimeMon3.2, there are no new features. TimeMon 4.0 was also ported to GNUstep and should be usable on any numer of systems including Linux and (soon) FreeBSD. \'B2\par
 \pard\ql\fs16\pard\tx960\tx1920\tx2880\tx3840\tx4800\tx5760\tx6720\tx7680\tx8640\tx9600\li360\ql \uc0 \par
 \par
 \pard\ql\fs36\pard\tx0\li100\ql \uc0 What Am I Seeing?\par
@@ -41,7 +41,7 @@ phone:\tab (606) 578-0412\par
 \pard\ql\fs16\pard\tx960\tx1920\tx2880\tx3840\tx4800\tx5760\tx6720\tx7680\tx8640\tx9600\li360\ql \uc0 \par
 \pard\ql\fs20\pard\tx8640\tx9600\ql \uc0 TimeMon is Copyright \'E3 1991-1997  by Scott Hess.  Permission to use, copy, modify, and distribute this software and its documentation for any purpose and without fee is hereby granted, provided that this copyright notice appear in all copies.  Scott Hess makes no representations about the suitability of this software for any purpose.  It is provided "as is" without express or implied warranty.\par
 \par
-\'B2 Ported to OPENSTEP by svail@apple.com, Ported to GNUstep by Gregory Casamento, Alex Malmberg and Gurkan Sungun \par
+\'B2 Ported to OPENSTEP by svail@apple.com, Ported to GNUstep by Gregory Casamento, Alex Malmberg and G\'FCrkan Seng\'FCn \par
 \par
 \fs14 \uc0 This is the \ul \uc0 really\ulnone \uc0  small print.\fs16 \uc0 \par
 \fs2 \uc0 And this is the \ul \uc0 really\ulnone \uc0  small print.\par
